# ragcli

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml  ragcli-claude-code-prompt.md
.github/workflows/: ci.yml  release.yml
ragcli/: __init__.py  __main__.py
ragcli/api/: helpers.py  models.py  routes.py  routes_collections.py  routes_documents.py  routes_feeds.py  routes_query.py  routes_settings.py  server.py  ui.py
ragcli/api/static/: app.js  charts.js  index.html  markdown.js  style.css
ragcli/cli/: app.py  eval_cmd.py  ingest_cmd.py  init_cmd.py  query_cmd.py  serve_cmd.py  status_cmd.py
ragcli/core/: agent.py  cache.py  chunker.py  config.py  digest.py  embedder.py  errors.py  export.py  feeds.py  generator.py  kg_extraction.py  knowledge_graph.py  mapreduce.py  models.py  pipeline.py  prompts.py  query_engine.py  query_strategies.py  retrieval.py  strategy.py
ragcli/eval/: metrics.py  reporter.py
ragcli/manifest/: collections.py  manager.py
ragcli/parsers/: base.py  markitdown.py  registry.py
ragcli/stores/: base.py  chroma.py
ragcli/watcher/: handler.py
tests/: conftest.py  test_api.py  test_api_security.py  test_cache.py  test_chunker.py  test_cli.py  test_embedder.py  test_eval_metrics.py  test_feeds.py  test_manifest.py  test_pipeline.py  test_strategy.py
