[project]
name = "ragcli"
version = "0.1.0"
description = "Zero-config RAG CLI — turn any folder into a queryable AI API"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12.0",
    "rich>=13.7.0",
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
    "markitdown[all]>=0.1.0",
    "litellm>=1.40.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "watchdog>=4.0.0",
    "toml>=0.10.2",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "python-multipart>=0.0.9",
    "networkx>=3.0",
    "feedparser>=6.0",
]

[project.optional-dependencies]
eval = ["ragas>=0.1.0", "deepeval>=0.21.0"]
pdf = ["pymupdf4llm>=0.0.10"]
dev = ["pytest>=8.0.0", "ruff>=0.4.0", "pytest-asyncio>=0.23.0"]

[project.scripts]
rag = "ragcli.cli.app:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
