[project]
name = "ragcli"
dynamic = ["version"]
description = "Zero-config RAG CLI — turn any folder into a queryable AI API"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Drew Galbraith", email = "drew0716@gmail.com" }]
requires-python = ">=3.10"
keywords = ["rag", "retrieval-augmented-generation", "llm", "embeddings", "chromadb", "cli", "fastapi", "ollama"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Indexing",
    "Typing :: Typed",
]
dependencies = [
    "typer>=0.12.0",
    "rich>=13.7.0",
    "chromadb>=0.5.0",
    "markitdown>=0.1.0",
    "litellm>=1.40.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "watchdog>=4.0.0",
    "tomli>=2.0.0; python_version < '3.11'",
    "tomli-w>=1.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "python-multipart>=0.0.9",
    "networkx>=3.0",
    "feedparser>=6.0",
]

[project.optional-dependencies]
# Local embeddings (sentence-transformers pulls in PyTorch — a large download).
# Without this extra, use cloud embeddings (OpenAI/Cohere via litellm).
local = ["sentence-transformers>=3.0.0"]
# Extended document formats (audio transcription, YouTube, etc.) via markitdown.
formats = ["markitdown[all]>=0.1.0"]
# Higher-fidelity PDF parsing.
pdf = ["pymupdf4llm>=0.0.10"]
all = ["ragcli[local,formats,pdf]"]
dev = ["pytest>=8.0.0", "ruff>=0.4.0", "pytest-asyncio>=0.23.0"]

[project.urls]
Homepage = "https://github.com/drew0716/ragcli"
Repository = "https://github.com/drew0716/ragcli"
Issues = "https://github.com/drew0716/ragcli/issues"
Changelog = "https://github.com/drew0716/ragcli/blob/main/CHANGELOG.md"

[project.scripts]
ragcli = "ragcli.cli.app:app"
rag = "ragcli.cli.app:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "ragcli/__init__.py"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
